--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sway",
-  "version": "1.0.0",
+  "name": "@openapi-mock/sway",
+  "version": "0.0.1",
   "description": "A library that simplifies Swagger integrations.",
   "main": "index.js",
   "types": "index.d.ts",
@@ -69,7 +69,7 @@
     "js-base64": "^2.4.3",
     "js-yaml": "^3.10.0",
     "json-refs": "^3.0.4",
-    "json-schema-faker": "github:json-schema-faker/json-schema-faker#34da18f",
+    "json-schema-faker": "^0.5.0-rc15",
     "lodash": "^4.17.5",
     "native-promise-only": "^0.8.1",
     "path-to-regexp": "^1.7.0",
